--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="style1.css">
+    <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,14 +9,7 @@
 </head>
 <body>
     <h1>My Singing Friends</h1>
-    <div class="friend">
-        <h3>Friend</h3>
-        <p>Test1</p>
-        <p>Test2</p>
-        <p>Test3</p>
-        <p>Test4</p>
-        <p>Test5</p>
-    </div>
-    <script src="app1.js"></script>
+    
+    <script src="script.js"></script>
 </body>
 </html>
